# music_player

./: Cargo.toml
src/: command.rs  loadfile.rs  main.rs
ui/: main.slint
ui/page/: ctrl.slint  list.slint
