[package]
name = "music_player"
version = "0.1.0"
edition = "2021"
build = "build.rs"
[[bin]]
path = "src/main.rs"
name = "slint"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.7.0"
tokio = {version = "1.38.0",features = ["full"]}
futures = "0.3"
ffmpeg-next = "7"
rodio = "0.19"
serde = { version = "1", features=["derive"] }
rfd = "0.14"
walkdir = "2"
chrono = { version = "0.4.31", default-features = false }

[build-dependencies]
slint-build = "1.7.0"


[profile.release]
lto = true
opt-level = 3
overflow-checks = false
strip = true
